Fixed the project root path fetching.